[package]
name = "mp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
git2 = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "0.1.1"